--- a/TheProject/package.nuspec
+++ b/TheProject/package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Hannasm.NugetPowershellScripts01</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <authors>hannasm</authors>
     <owners>hannasm</owners>
     <licenseUrl>https://github.com/hannasm/Hannasm.NugetPowershellScripts01/blob/master/LICENSE.md</licenseUrl>
@@ -10,22 +10,21 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Set of scripts useful for creating and publishing nuget packages.</description>
     <releaseNotes>
+    * 1.0.2 - content files weren't being included because nuget requires backslashes instead of forward slashes apparently
     * 1.0.1 - This is the first release
   </releaseNotes>
     <copyright>Copyright 2017</copyright>
   </metadata>
   <files>
-    <file src="../readme.md" target="Content/README_Hannasm_NugetPowershellScripts01.md" />
-    <file src="bin/debug/TheProject.dll" target="lib/0f5e8d48-e102-406e-a100-c4bbc4ecc61d.dll" />
-    <!-- this is a workaroundbecause nuget wont create the package without a dll apparently -->
-    <file src="../LICENSE.md" target="content/LICENSE_Hannasm_NugetPowershellScripts01.md" />
-    <file src="../BumpVersionInstructions.md" target="content" />
-    <file src="../GenerateAssemblyInfo.ps1" target="content" />
-    <file src="../GenerateNugetPackages.ps1" target="content" />
-    <file src="../PublishNugetPackages.ps1" target="content" />
-    <file src="../UpdateNugetPackageIfNeeded.ps1" target="content" />
-    <file src="../metadata.template.xml" target="content/metadata.xml" />
-    <file src="../package.template.nuspec" target="content" />
+    <file src="..\readme.md" target="Content\README_Hannasm_NugetPowershellScripts01.md" />
+    <file src="..\LICENSE.md" target="content\LICENSE_Hannasm_NugetPowershellScripts01.md" />
+    <file src="..\BumpVersionInstructions.md" target="content\" />
+    <file src="..\GenerateAssemblyInfo.ps1" target="content\" />
+    <file src="..\GenerateNugetPackages.ps1" target="content\" />
+    <file src="..\PublishNugetPackages.ps1" target="content\" />
+    <file src="..\UpdateNugetPackageIfNeeded.ps1" target="content" />
+    <file src="..\metadata.template.xml" target="content\metadata.xml" />
+    <file src="..\package.template.nuspec" target="content" />
   </files>
 </package>
 <!-- vim: set expandtab ts=2 sw=2:  -->
